<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="pers.lxt.smsencryptor.activity.ContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:translationZ="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="?android:attr/selectableItemBackground"
                android:src="@android:drawable/ic_menu_revert"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/create_contact"
                android:textSize="18sp"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:layout_margin="15dp"
        android:hint="@string/contact_address"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_margin="15dp"
        android:hint="@string/contact_name"/>

    <LinearLayout
        android:id="@+id/_pky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/name"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_key"
                android:textSize="18sp"
                android:layout_marginEnd="15dp"/>

            <Button
                android:id="@+id/get_pky_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_from_img"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <Button
                android:id="@+id/get_pky_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_from_camera"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_below="@id/_pky"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

</RelativeLayout>
